🐕‍🦺 Update Path access to Java 11+